# PerceptionsLibrary24a

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PerceptionsLibrary24a  cmake-tutorial  cmake_install.cmake  simple-c-setup  y  y.pub
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
alex_shit/: alex_run.py  filter.py
alex_shit/final_project/project/: CMakeLists.txt  ColorCones.cu  ColorCones.hpp  DBscan.cu  cluster_color.cu  cluster_color_parallel.cu  main.cpp
alex_shit/final_project/project/old_versions/: firstrev.cpp
alex_shit/final_project/project/old_versions/coloring/: color_midline_CLEAN.cu  color_midline_tests.cu  scaler_svm.joblib
alex_shit/final_project/project/old_versions/coloring/SVM/: test_SVM_straight.csv
alex_shit/final_project/project/old_versions/ground_filtering/: Grace_KindaWorks.cu  Grace_nonperformant.cu  MLS.cu  main_grid_filter.cpp  main_ground_filter_mid.cpp
alex_shit/final_project/project/utils/: alex_run.py  filter.py  grace_test.py  new_vis.py  utils.py
alex_shit/project/: CMakeLists.txt  DBscan.cu  GraceAndConrad.cu  GraceAndConrad.hpp  IntensityCluster.cu  IntensityCluster.hpp  IntensityColor_split.cu  Point.hpp  SVM.py  cluster_color.cu  color_midline_SO_CLOSE.cu  color_midline_works_shit.cu  main.cpp  new_vis.py
lib/src/googletest-stamp/: googletest-gitinfo.txt  googletest-update-info.txt
lib/tmp/: googletest-cfgcmd.txt  googletest-gitclone.cmake  googletest-gitupdate.cmake  googletest-mkdirs.cmake
project/: ColorCones.cu  DBscan.cuh  DBscan.hpp  GraceAndConrad.cu  Point.hpp  README.txt
project/old_versions/coloring/: cone_classifier_svm.joblib  spline_fit_color.cu
project/old_versions/ground_filtering/: Ground_filter_mid.cu
project/utils/: npz_to_csv.py  visualize.py
src/: main.cc  math.cc  math.h
src/ground_filtering/: CMakeLists.txt  a.out  filter.cc  filter.cpp  filter.h  non_pcl.cc  non_pcl.cpp  old_filter.py  pointcloudparse.cpp  visualizer.py
src/ground_filtering/point_clouds/: point_cloud_242.csv
src/intake/: intake.cpp
src/intake/pcd_files/: instance-0.pcd  instance-1.pcd  instance-100.pcd  instance-1000.pcd  instance-1001.pcd  instance-1002.pcd  instance-1003.pcd  instance-1004.pcd  instance-1005.pcd  instance-1006.pcd  instance-1007.pcd  instance-1008.pcd  instance-1009.pcd  instance-101.pcd  instance-1010.pcd  instance-1011.pcd  instance-1012.pcd  instance-1013.pcd  instance-1014.pcd  instance-1015.pcd  instance-1016.pcd  instance-1017.pcd  (+1307 more)
src/voxel_downsampling/: pcd_converter.cpp  vox_test.cpp
test/: math_test.cc
(+1335 files in other folders)
